website/resources/css/main.less
/* ... */
/*----------------.
| Documentation   |
`----------------*/

section.doc {
  h1 {
    font-size: 33px; line-height: 41px; padding-bottom: 15px;
    border-bottom: 1px solid #DFDFDF; display: block; margin-top: 0;
  }

  p, li, p.note { line-height: 23px; font-size: 15px; }
  p.note, em { font-style: italic; color: #8C8C8C; }
  p a, li a { color: @infinitblue; .transition() }

  p.title {
    font-family: @helvetica; font-weight: 300;font-size: 26px; line-height: 39px;
    width: 90%;
  }

  p a:hover, li a:hover {
    color: darken(@infinitblue, 10%);
    border-bottom: 2px solid darken(@infinitblue, 10%);
  }

  h2 { margin-top: 70px; font-size: 1.9em;}
  h3 { font-size: 1.4em; margin-top: 45px; margin-bottom: 7px; }
  .button { font-size: 14px; padding: 6px 11px; margin-bottom: 20px;}

  code {
    background: #E9F2F5; border-radius: 3px; padding: 3px;
    color: #5A6878; font-family: @monospace; font-size: 13px; z-index: -1;
  }

  ul { list-style-type: circle; }
  ul li { margin: 10px 20px;}
  ol li { padding-left: 4px; margin: 10px 15px;}

  ul.horizontal { list-style-type: none; }
  ul.horizontal:after { clear: both; display: table; content: ''; }
  ul.horizontal li {
    margin: 5px 20px 5px 0; float: left;
    img { max-height: 15px; width: auto; margin-right: 3px; }
  }

  blockquote {
    background: #F1F1F1; margin: 0; padding: 25px; border-radius: 5px;
    font-size: 16px; line-height: 25px; font-weight: 300;
    font-family: @helvetica;
  }

  blockquote.warning { background: #FFFAD4; color: #737129}

  pre {
    position: relative;
    code {
      display: block; font-family: @monospace; background: @terminalbg;
      padding: 15px 50px 15px 20px; border-radius: 5px; color: #f8f8f2;
      margin-left: 0; min-height: 48px;
    }
    &.alternate code { background: #2B3F63; }
  }

  pre > div {
    position: absolute; right: -5px; top: 11px; z-index: 1; overflow: hidden;
    width: 75px; height: 75px; text-align: right;
  }

  pre > div span {
    font-size: 10px; font-weight: bold; color: #FFF; text-transform: uppercase;
    text-align: center; line-height: 20px;  width: 100px;
    transform: rotate(45deg); -webkit-transform: rotate(45deg);
    display: block; font-family: @sourcesans; background: #808080;
    position: absolute; top: 19px; right: -21px;
    // box shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
  }
  pre > div span::before {
    content: ""; position: absolute; left: 0px; top: 100%; z-index: -1;
    border-left: 3px solid darken(#808080, 20%); border-right: 3px solid transparent;
    border-bottom: 3px solid transparent; border-top: 3px solid darken(#808080, 20%)
  }
  pre > div span::after {
    content: "";
    position: absolute; right: 0px; top: 100%; z-index: -1;
    border-left: 3px solid transparent; border-right: 3px solid darken(#808080, 20%);
    border-bottom: 3px solid transparent; border-top: 3px solid darken(#808080, 20%)
  }
  pre.alternate > div span { background: #799AD4; }
  pre.alternate > div span::before {
    border-left: 3px solid darken(#799AD4, 20%);
    border-top: 3px solid darken(#799AD4, 20%);
  }
  pre.alternate > div span::after {
    border-right: 3px solid darken(#799AD4, 20%);
    border-top: 3px solid darken(#799AD4, 20%);
  }

  img { max-width: 100%; }

  table { width: 100%; margin: 30px 0;}
  table tr td { text-align: center; padding: 5px; }

  table tr:nth-child(1) td, table tr:nth-child(1) th {
    font-weight: bold; border-bottom: 3px solid #E6E6E6;
    padding-bottom: 10px;
  }

  table.features tr td:nth-child(1) {
    font-weight: bold; text-align: left;
    padding: 10px 5px;
    border-right: 3px solid #E6E6E6;
  }

  .tags { margin-top: -10px; margin-bottom: 25px; }
}
/* ... */

